373		Merge main into minor
374		Merge main into mod
375		Fixes from merge
376		Manpower numbers are less insane
377		Fix crashbug with independent republic families
378		Convert buildings
379		Fix bug with culturalTech option
380		Fix crashbug when holders of only titular titles are vassals
381		Added tag 0.7A Release for changeset 56a327aaa9eb
382		Convert forts
383		Convert universities
384		Convert textile manufactories
385		Historical forts for the ROTW
386		Historical CoTs
387		Add Empire_of_Britannia to test suite
388		Merchant republics get a CoT if they didn't already have one
389		Levy multiplier has a minimum of 1.0
390		Localisations for added countries
391		Avoid crash if fewer than six potential electors
392		Roman Empire can no longer restore Byzantium
393		Open market agreements
394		Trade leagues
395		Trade stations
396		Update testing scripts for new mod stuff
397		Merge bugfixes to main
398		Merge mod into main
399		Merge mod into main with latest commit
400		Add base mod to test configuration
401		Added tag 0.8 Release for changeset 43929ab67b4f
402		Merge main into bugfixes
403		Actually set preferred unit type
404		Get vassals to appear
405		Rulers properly absorb all their own holdings
406		Actually read in crown authority
407		Fix some typos
408
409
410
411
412
413
414
415
416
417
418		Update culture and religion mappings for 1.10
419		Replace hard coded path with system variable
420		Adjust tech for 1.10
421		Handle new relationship modifiers in 1.10
422		Update province mappings for 1.10
423		Fix minor tech bug
424		Add hellenic religion and update localizations
425		Don't try to set culture in water provinces
426		Merge bugfixes into main
427		Resolve problems with merge
428		Add 1.10 saves to test suite
429		Update CK2 version information
430		Update test configurations
431		Fix typos in converter mod
432		Eliminate signed/unsigned mismatch in CK2Version
433		Autogenerated tags must be three characters long
434		Centralization slider