@@ -438,4 +438,8 @@ Revision	Log Message
 431		Fix typos in converter mod
 432		Eliminate signed/unsigned mismatch in CK2Version
 433		Autogenerated tags must be three characters long
-434		Centralization slider
+434		Added tag 0.8A Release for changeset 99d3aaaf9719
+435		Centralization slider
+436
+437
+438		Aristocracy/Plutocracy slider
